--- a/live_thu_ee/live/templates/index.html
+++ b/live_thu_ee/live/templates/index.html
@@ -16,19 +16,29 @@
     <script type="text/javascript" src="{% static "js/damoo.js" %}"></script>
     <script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script>
 
+    {% load static %}
+    <link rel="stylesheet" href="{% static "css/main.css" %}">
+
 </head>
 
-<body style="padding: 0;margin: 0">
+<body class="sty" style="padding: 0;margin: 0;">
 
     <!-- Just A temp Bullet-Screen demo -->
-    <div id="danmu-main" style="width: 100%;height: 520px;background-color: lightskyblue">
-        <div id="danmu-screen" style="width: 100%; height: 100%;background: lightskyblue"></div>
+    <div id="danmu-main" style="width: 100%;">
+        <div id="danmu-screen" style="width: 100%; height: 100%;"></div>
     </div>
 
 
     <script>
 
-        var damoo = Damoo(document.getElementById("danmu-screen"),'dm-canvas',20);
+        var win_hi = $(window).height()*0.6 + "px";
+        $('#danmu-main').css("height",win_hi);
+
+        /*在末尾加参数可定义全局字体 例：
+        var damoo = Damoo(document.getElementById("danmu-screen"),'dm-canvas',20,'Arial');
+        */
+
+        var damoo = Damoo(document.getElementById("danmu-screen"),'dm-canvas',16);
         damoo.start();
 
         var txt;
@@ -43,6 +53,14 @@
                 }
             });
         }
+
+
+
+        /*如需修改颜色，则 damoo.emit({text: txt, color: (这里写出你想选的颜色)})
+        * 示例如下：*/
+        /*damoo.emit({text:"asdsaasd",color: "white"});*/
+        /*弹幕颜色与文本可以以json格式控制，格式如上，详细使用指南可参阅
+        * https://github.com/jamesliu96/Damoo*/
 
         setInterval("interactive()",1000);
 
