--- a/live_thu_ee/live/templates/index.html
+++ b/live_thu_ee/live/templates/index.html
@@ -49,6 +49,7 @@
             hrq.success(function(data){
                 if( data.danmu_content!=undefined && data.danmu_content!=null && data.danmu_content!="" ) {
                     txt = data.danmu_content;
+                    txt.replace(/&nbsp;/," ");
                     damoo.emit(txt);
                 }
             });
